# cuda-sumcheck

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rust_toolchain
bn254/: Cargo.toml  build.rs
bn254/src/: fieldbinding.rs  lib.rs
bn254/src/cpu/: arithmetic.rs  multilinear.rs  sumcheck.rs
bn254/src/gpu/: mod.rs  multilinear.rs  sumcheck.rs
bn254/src/gpu/cuda/includes/: field_binding.h
bn254/src/gpu/cuda/kernels/: multilinear.cu
cuda_sumcheck/: Cargo.toml
cuda_sumcheck/src/: lib.rs
docs/: design.md
goldilocks/: Cargo.toml  build.rs
goldilocks/src/: fieldbinding.rs  lib.rs
goldilocks/src/cpu/: arithmetic.rs  parallel.rs  sumcheck.rs
goldilocks/src/gpu/: sumcheck.rs
goldilocks/src/gpu/cuda/includes/: field_binding.h
goldilocks/src/gpu/cuda/kernels/: sumcheck.cu
sumcheck/: Cargo.toml  Makefile  build.rs
sumcheck/src/: field.rs  fieldbinding.rs  lib.rs  transcript.rs  utils.rs
sumcheck/src/cpu/: arithmetic.rs  mod.rs  parallel.rs  sumcheck.rs
sumcheck/src/cuda/includes/: prime_field.h  test.cpp  wrapper.h
sumcheck/src/cuda/includes/barretenberg/common/: log.hpp  op_count.hpp
sumcheck/src/cuda/includes/barretenberg/crypto/blake3s/: c_bind.cpp
sumcheck/src/cuda/includes/barretenberg/ecc/curves/bn254/: bn254.cuh  fq.cuh  fq.hpp  fq2.cuh  fr.cuh  g1.cuh  g1.hpp  g2.cuh
sumcheck/src/cuda/includes/barretenberg/ecc/fields/: field.cuh  field_declarations.cuh  field_declarations.hpp  field_impl.cuh  field_impl.hpp  field_impl_generic.cuh  field_impl_generic.hpp  field_impl_x64.cuh
sumcheck/src/cuda/includes/barretenberg/ecc/groups/: affine_element.cuh  affine_element.hpp  affine_element_impl.cuh  affine_element_impl.hpp  element.cuh  element.hpp  element_impl.cuh  element_impl.hpp  group.cuh  group.hpp  wnaf.hpp
sumcheck/src/cuda/includes/barretenberg/env/: logstr.hpp
sumcheck/src/cuda/includes/barretenberg/numeric/bitop/: sparse_form.hpp
sumcheck/src/cuda/includes/barretenberg/numeric/random/: engine.cpp
sumcheck/src/cuda/includes/barretenberg/numeric/uint128/: uint128.hpp  uint128_impl.hpp
sumcheck/src/cuda/includes/barretenberg/numeric/uint256/: uint256.cuh  uint256_impl.cuh  uint256_impl.hpp
sumcheck/src/cuda/includes/barretenberg/numeric/uintx/: uintx.cuh  uintx.hpp  uintx_impl.cuh  uintx_impl.hpp
sumcheck/src/cuda/kernels/: multilinear.cu  scalar_multiplication.cu
sumcheck/src/gpu/: multilinear.rs  sumcheck.rs
sumcheck/src/gpu/cuda/includes/: transcript.cu  transcript.cuh  wrapper.h
sumcheck/src/gpu/cuda/kernels/: multilinear.cu  sumcheck.cu
sumcheck/src/utils/: arithmetic.rs  hash.rs
sumcheck_test/: Cargo.toml
test/: Cargo.toml  build.rs
