[package]
name = "bn254"
version.workspace = true
edition.workspace = true

[dependencies]
cudarc.workspace = true
ff.workspace = true
rayon.workspace = true
itertools.workspace = true
halo2curves.workspace = true
rand.workspace = true
num-integer.workspace = true

[build-dependencies]
bindgen.workspace = true
cc.workspace = true
regex.workspace = true
