[package]
name = "goldilocks64"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { version = "0.11.3", features = ["cuda-version-from-build-system"] }
ff = "0.13.0"
rayon = "1.8"
itertools = "0.10.5"
halo2curves = "0.1.0"
rand = "0.8"
num-integer = "0.1.45"
goldilocks = { git = "https://github.com/zhenfeizhang/Goldilocks.git" }

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.82"
regex = "1.9.3"
