[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cudarc = "0.11.3"
ff = "0.13.0"
rayon = "1.8"
itertools = "0.10.5"
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.3", package = "halo2curves" }
rand = "0.8"

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.82"
regex = "1.9.3"
